# VerityMap

./: CMakeLists.txt  Makefile  README.md  requirements.txt  setup.py  tandemmapper.py
.github/workflows/: main.yml
conda/: meta.yaml
config/: config_tm2_hifi.tsv
py_src/: mapper.py  reporting.py  utils.py
src/projects/tandem_mapper/: CMakeLists.txt  dp_scoring.hpp  hash_utils.hpp  ksw_align.hpp  strand.hpp  tandem_mapper.hpp
src/projects/tandem_mapper/config/: config.hpp
src/projects/tandem_mapper/kmer_index/: kmer_index.hpp  sketch_contigs.hpp  target_indexer.hpp
src/tools/bloom/: CMakeLists.txt
src/tools/common/: CMakeLists.txt  cl_parser.hpp  output_utils.hpp  parallel.h
src/tools/config_dir_def/: config_dir_def.cpp  config_dir_def.hpp
src/tools/ksw2/: CMakeLists.txt  LICENSE.txt  ksw2_extz2_sse.cpp
src/tools/sequences/: seqio.hpp  sequence.cpp  verify.hpp
src/tools/sketch/: CMakeLists.txt
src/tools/version/: version.cpp
tandemmapper/: tandemmapper.py
tandemmapper/py_src/: assembly.py  mapper.py  reporting.py
tandemmapper/src/projects/tandem_mapper/: cigar.cpp  cigar.hpp  matches.hpp  query_indexer.hpp  tandem_mapper.hpp
tandemmapper/src/tools/: CMakeLists.txt
tandemmapper/src/tools/common/: logging.hpp  math_utils.hpp  string_utils.hpp
tandemmapper/src/tools/sequences/: CMakeLists.txt  contigs.cpp  contigs.hpp  nucl.hpp
tandemmapper2/: CMakeLists.txt  Makefile  main.py
tandemmapper2/config/: config_tm2_hifi.tsv  config_tm2_ont.tsv
tandemmapper2/py_src/: mapper.py  reporting.py  utils.py
tandemmapper2/src/projects/: CMakeLists.txt
tandemmapper2/src/projects/tandem_mapper/: CMakeLists.txt  chaining.hpp  cigar.cpp  cigar.hpp  cms_utils.hpp  dp_scoring.hpp  ksw_align.hpp  matches.hpp  query_indexer.hpp  rolling_hash.hpp  strand.hpp  tandem_mapper.cpp  tandem_mapper.hpp
tandemmapper2/src/projects/tandem_mapper/config/: config.cpp  config.hpp
tandemmapper2/src/projects/tandem_mapper/kmer_index/: approx_kmer_indexer.hpp  filter_rep_kmers.hpp  kmer_filter.hpp  kmer_index.hpp  kmer_type.hpp  kmer_window.hpp  sketch_contigs.hpp  sketch_queries.hpp  target_indexer.hpp
tandemmapper2/src/tools/common/: CMakeLists.txt  cl_parser.cpp  coverage_utils.cpp  coverage_utils.hpp  dir_utils.hpp  logging.hpp  math_utils.hpp  oneline_utils.hpp  parallel.h
tandemmapper2/src/tools/config_dir_def/: config_dir_def.cpp.in
test_dataset/: test_query.fasta
tests/py/: censat_sim_worst_allowed_results.tsv  check_cen9_errors.py  check_deletion.py  check_indel_errors.py  check_real_censat_chm13.py  check_sim_censat_chm13.py  check_sim_diploid.py
veritymap/: .clang-format  CMakeLists.txt  Makefile  main.py
veritymap/config/: config_hifi_diploid.tsv  config_hifi_haploid.tsv  config_hifi_haploid_complete.tsv  config_ont_haploid_complete.tsv  config_tm2_hifi.tsv  config_tm2_ont.tsv
veritymap/py_src/: assembly.py  clip_finder.py  mapper.py  reporting.py  utils.py
veritymap/src/projects/: CMakeLists.txt
veritymap/src/projects/veritymap/: CMakeLists.txt  chaining.hpp  cigar.cpp  cigar.hpp  cms_utils.hpp  dp_scoring.hpp  hash_utils.hpp  ksw_align.hpp  mapper.hpp  matches.hpp  query_indexer.hpp  rolling_hash.hpp  strand.hpp  veritymap.cpp  veritymap.hpp
veritymap/src/projects/veritymap/config/: config.cpp  config.hpp
veritymap/src/projects/veritymap/kmer_index/: approx_canon_kmer_indexer.hpp  approx_canon_kmer_indexer_single_thread.hpp  approx_kmer_indexer.hpp  exact_canon_kmer_indexer.hpp  filter_rep_kmers.hpp  indexed_contigs.hpp  kmer_filter.hpp  kmer_filter_canon.hpp  kmer_index.hpp  kmer_index_.hpp  kmer_window.hpp  target_indexer.hpp
veritymap/src/projects/veritymap/kmer_index/index_builders/: approx_canon_kmer_indexer_single_thread.hpp  approx_kmer_indexer_builder.hpp  exact_canon_kmer_indexer.hpp  exact_kmer_index_builder.hpp  kmer_filter.hpp  kmer_index_builder.hpp  kmer_window.hpp
veritymap/src/tools/: CMakeLists.txt
veritymap/test_dataset/: test_target.fasta
(+32 files in other folders)
